scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/AssrtCoreTest06.scr
module bad.extensions.assrtcore.safety.assrtprog.AssrtCoreTest06;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<x:=1> x>=1"
{
	1(y:int) from A to B; @"((y=x) && (x=1))"
	do Proto1(A, B); @"<(x+1)>"  // CHECKME: vs. DbC?  also subs the x here on unfolding?
}
//*/
